chemicals/try_own_namespace/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: chemicals
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: keycloak
        context: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        ports:
        - name: service
          containerPort: 8080
          protocol: TCP
