chemicals/try_own_namespace/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: chemicals
  labels:
    run: keycloak
    context: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - port: 8080
